--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1"
   },
